Hacer requerido el campo de comentario

--- a/system_huellitas/views/public/perfil_editar.html
+++ b/system_huellitas/views/public/perfil_editar.html
@@ -69,7 +69,7 @@
                                 <div class="col-12 col-md-6">
                                     <label for="correoCliente" class="form-label fw-bold">Correo electrónico</label>
                                     <input type="email" id="correoCliente" name="correoCliente"
-                                        class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                        class="form-control form-control-lg shadow  rounded-3 bg-white" readonly>
                                     <br>
                                 </div>
                                 <div class="col-12 col-md-6">
