--- a/system_huellitas/views/public/producto.html
+++ b/system_huellitas/views/public/producto.html
@@ -93,7 +93,7 @@
                         <div class="input-group py-1">
                             <textarea class="form-control mensaje_input" id="comentarioValoracion"
                                 name="comentarioValoracion" rows="5" aria-label="With textarea"
-                                placeholder="Escribe un comentario..."></textarea>
+                                placeholder="Escribe un comentario..."required></textarea>
                         </div>
                         <!-- Botón para enviar el comentario -->
                         <div class="py-4">
