cosillas que nunca subí

--- a/system_huellitas/resources/css/public/productos.css
+++ b/system_huellitas/resources/css/public/productos.css
@@ -40,6 +40,10 @@ a {
     border-color: #FCA311;
     /* Color del borde */
 }
+ 
+.productoDropShadow{
+    filter:  drop-shadow( 1px 1px 10px rgb(238, 150, 75));
+}
 
 .buton {
     border-radius: 1em;
