Mejorando diseño del boton para generar reportes en marcas

--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -46,18 +46,18 @@
                     <p>Haz clíc en el siguiente botón para poder agregar una nueva marca.</p>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
+                    <button
+                            class="btn btn-orange-color btn-sm text-light float-sm-left float-md-end float-lg-end rounded-3 p-2"
+                            data-bs-toggle="modal" onclick="openReport()" type="button">
+                            <img class="me-1" src="../../resources/img/png/report.png" width="20px">
+                            Generar reporte
+                    </button>
                     <!-- .float-left y end posiciona el boton a la izquieda o derecha de la pantalla dependiendo del tamaño -->
                     <button
-                        class="btn btn-red-color btn-sm text-light float-sm-left float-md-end float-lg-end rounded-3 p-2"
+                        class="btn btn-red-color btn-sm text-light float-sm-left float-md-end float-lg-end rounded-3 p-2 me-2"
                         data-bs-toggle="modal" onclick="openCreate()" type="button">
                         <img class="me-2" src="../../resources/img/png/boton_agregar.png" width="20px">
                         Agregar Marca
-                    </button>
-                    <button
-                         class="btn btn-red-color btn-sm text-light float-sm-left float-md-end float-lg-end rounded-3 p-2"
-                         data-bs-toggle="modal" onclick="openReport()" type="button">
-                        <img class="me-2" src="../../resources/img/png/boton_agregar.png" width="20px">
-                        Generar reporte
                     </button>
                 </div>
             </div>
