Line graph, termine mis gráficas

--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -17,6 +17,8 @@
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/pedidos.css">
     <!--Personalizamos los botones de la paginacion-->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/pagination_styles.css">
+    <!--Personalizamos la dimensión de las gráficas-->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/scrud_pedidos.css">
     <!--Se agrega la libreria de DataTables para la paginación-->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css" />
 </head>
@@ -46,6 +48,27 @@
                 <div>
                     <p>Observa todos los pedidos que se han tenido en Huellitas Pet's, recuerda cambiar el estado de los
                         pedidos.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Gráfica-->
+        <div class="container mt-4 ">
+            <div class="row align-items-center">
+                <div class="col-12">
+                    <h3 class="fw-bold">Gráficas de pedidos a nivel mensual</h2>
+                        <p>Da click al botón para ver la gráfica y doble click para esconderlo.</p>
+                </div>
+                <div class="col-12">
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                        <button type="button" class="btn active" data-bs-toggle="button" aria-pressed="true" id="btn2G">Pedidos completados</button>
+                    </div>
+                </div>
+                <div class="col-12 d-none align-items-center" id="ContenedorG">
+                    <!-- Gráfica -->
+                    <div class="canvas-container">
+                        <canvas id="myChart" class="container-fluid"></canvas>
+                    </div>
                 </div>
             </div>
         </div>
@@ -187,7 +210,7 @@
                 </div>
             </div>
         </div>
-
+        <script type="text/javascript" src="../../resources/js/chart.umd.js"></script>
     </main>
 
     <!-- Framework Bootstrap - JS -->
