--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -63,6 +63,27 @@
             </div>
         </div>
 
+        <!-- Gráfica-->
+        <div class="container mt-2 ">
+            <div class="row align-items-center">
+                <div class="col-12">
+                    <h3 class="fw-bold">Gráficas de productos por marcas</h2>
+                        <p>Da click al botón para ver la gráfica y doble click para esconderlo.</p>
+                </div>
+                <div class="col-12">
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                        <button type="button" class="btn btn-red-color btn-sm text-light float-sm-left float-md-end float-lg-end rounded-3 p-2 active" data-bs-toggle="button" aria-pressed="true" id="btn1G">Productos por marca</button>
+                    </div>
+                </div>
+                <div class="col-12 d-none align-items-center" id="ContenedorG">
+                    <!-- Gráfica -->
+                    <div class="canvas-container">
+                        <canvas id="myChart" class="container-fluid"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Contenido principal: Tabla de marcas -->
         <div class="container p-3 mt-4">
             <div class="table-responsive">
@@ -134,6 +155,7 @@
                     </form>
                 </div>
             </div>
+            <script type="text/javascript" src="../../resources/js/chart.umd.js"></script>
         </div>
 
 
