--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -66,7 +66,7 @@
         <!-- Contenido principal: Tabla de marcas -->
         <div class="container p-3 mt-4">
             <div class="table-responsive">
-                <table class="table align-middle" id="paginationTable">
+                <table class="table align-middle text-center" id="paginationTable">
                     <thead>
                         <tr>
                             <td colspan="8" id="rowsFound" hidden></td>
