Reporte para clientes casi terminado, y también agregue una view al script

--- a/system_huellitas/views/admin/scrud_clientes.html
+++ b/system_huellitas/views/admin/scrud_clientes.html
@@ -53,27 +53,37 @@
         <!-- Gráfica-->
         <div class="container mt-4 ">
             <div class="row align-items-center">
-                <div class="col-12">
-                    <h3 class="fw-bold">Gráficas de clientes</h2>
-                        <p>Elige una opción para visualizar la gráfica.</p>
-                </div>
-                <div class="col-12">
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <button type="button" class="btn active" data-bs-toggle="button" id="btn1G">Clientes con más pedidos</button>
-                        <button type="button" class="btn" data-bs-toggle="button" aria-pressed="true" id="btn2G">Clientes con más productos</button>
-                        <button type="button" class="btn" data-bs-toggle="button" id="btn3G">Clientes registrados por mes</button>
+                <div class="col-sm-12 col-md-10">
+                    <div class="col-12">
+                        <h3 class="fw-bold">Gráficas de clientes</h2>
+                            <p>Elige una opción para visualizar la gráfica.</p>
+                    </div>
+                    <div class="col-12">
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                            <button type="button" class="btn active" data-bs-toggle="button" id="btn1G">Clientes con más pedidos</button>
+                            <button type="button" class="btn" data-bs-toggle="button" aria-pressed="true" id="btn2G">Clientes con más productos</button>
+                            <button type="button" class="btn" data-bs-toggle="button" id="btn3G">Clientes registrados por mes</button>
+                        </div>
+                    </div>
+                    <div class="col-12 d-none align-items-center" id="ContenedorG">
+                        <!-- Gráfica -->
+                        <div class="canvas-container mt-4">
+                            <canvas id="myChart" class="container-fluid"></canvas>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 d-none align-items-center" id="ContenedorG">
-                    <!-- Gráfica -->
-                    <div class="canvas-container">
-                        <canvas id="myChart" class="container-fluid"></canvas>
-                    </div>
+                <div class="col-sm-12 col-md-2">
+                    <button
+                        class="btn btn-orange-color btn-sm text-light float-sm-left float-md-end float-lg-end rounded-3 p-2"
+                        data-bs-toggle="modal" onclick="openReport()" type="button">
+                        <img class="me-1" src="../../resources/img/png/report.png" width="20px">
+                        Generar reporte
+                    </button>
                 </div>
             </div>
         </div>
         <!-- Tabla -->
-        <div class="container mt-5">
+        <div class="container mt-5 mb-5">
             <div class="table-responsive">
                 <table class="table align-middle" id="paginationTable">
                     <!-- Encabezado de las tablas -->
