imagen se sigue generando negra

--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="col-12 d-none align-items-center" id="ContenedorG">
-                    <div class="canvas-container">
+                    <div class="canvas-container bg-white-color">
                         <canvas id="myChart" class="container-fluid"></canvas>
                     </div>
                 </div>
