Factura de compra terminada

--- a/system_huellitas/views/public/carrito_3.html
+++ b/system_huellitas/views/public/carrito_3.html
@@ -56,11 +56,14 @@
                             <div class="bg-green-color fw-semibold d-grid grap-2 shadow rounded-4">
                                 <p class="text-center mt-3" id="status"></p>
                             </div>
-                            <div class="d-flex justify-content-start mb-4 mt-3">
+                            <div class="d-flex justify-content-start mb-2 mt-3">
                                 <img src="../../resources/img/png/info.png" width="25px" height="25px">
                                 <p class="fw-light ms-2 small">Se te enviará un correo
                                     electrónico con la hora y lugar para que puedas recorgerlo</p>
                             </div>
+                            <button class="btn btn-orange-color text-light" onclick="openInvoice()">
+                                Generar factura
+                            </button>
                         </div>
                     </div>
                 </div>
