Agregar reporte de total de valoraciones

--- a/system_huellitas/views/admin/scrud_comentarios.html
+++ b/system_huellitas/views/admin/scrud_comentarios.html
@@ -49,6 +49,14 @@
                 <div class="col-md-6 col-lg-6">
                     <p>Revisa diariamente los comentarios y recuerda que puedes ocultarlos.</p>
                 </div>
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <button
+                            class="btn btn-orange-color btn-sm text-light float-sm-left float-md-end float-lg-end rounded-3 p-2"
+                            data-bs-toggle="modal" onclick="openReport()" type="button">
+                            <img class="me-1" src="../../resources/img/png/report.png" width="20px">
+                            Generar reporte
+                    </button>
+                </div>
             </div>
         </div>
 
@@ -175,6 +183,7 @@
                     </div>
                 </div>
             </div>
+            <script type="text/javascript" src="../../resources/js/chart.umd.js"></script>
         </div>
     </main>
 
