--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -157,7 +157,7 @@
             </div>
             <script type="text/javascript" src="../../resources/js/chart.umd.js"></script>
         </div>
-
+    </main>
 
 
         <!-- Framework Bootstrap - JS -->
