--- a/system_huellitas/views/admin/scrud_categorias.html
+++ b/system_huellitas/views/admin/scrud_categorias.html
@@ -51,7 +51,7 @@
                         class="btn btn-red-color btn-sm text-light float-sm-left float-md-end float-lg-end rounded-3 p-2"
                         data-bs-toggle="modal" onclick="openCreate()" type="button">
                         <img class="me-2" src="../../resources/img/png/boton_agregar.png" width="20px">
-                        Agregar Marca
+                        Agregar Categoría
                     </button>
                 </div>
             </div>
