--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-12">
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <button type="button" class="btn btn-red-color btn-sm text-light float-sm-left float-md-end float-lg-end rounded-3 p-2 active" data-bs-toggle="button" aria-pressed="true" id="btn1G">Productos por marca</button>
+                        <button type="button" class="btn active btn-sm float-sm-left float-md-end float-lg-end rounded-3 p-2 active" data-bs-toggle="button" aria-pressed="true" id="btn1G">Productos por marca</button>
                     </div>
                 </div>
                 <div class="col-12 d-none align-items-center" id="ContenedorG">
