--- a/system_huellitas/views/admin/recuperacion_contra_1.html
+++ b/system_huellitas/views/admin/recuperacion_contra_1.html
@@ -30,18 +30,17 @@
                         <p class="fw-normal text-center">Ingresa tu correo electrónico asociado a tu cuenta.</p>
                         <div class="container p-5 ">
                             <!--Le damos nombre con id y name al form para luego utilizarlo en el backend-->
-                            <form action="" id="recuperacion_contra_1" name="recuperacioncontra1">
+                            <form id="recuperacion_contra_1" name="recuperacioncontra1">
                                 <!--En este div se encuentra el input, el tipo de contenido del input, el label que esta arriba del input y la longitud del input-->
                                 <div>
                                     <label for="email_recuperacion" class="form-label">Correo electrónico</label>
                                     <input type="email"
                                         class="form-control form-control-lg bg-white p-2 shadow rounded-3"
-                                        id="email_recuperacion" name="emailRecuperacion">
+                                        id="email" name="correo">
                                 </div>
                                 <!--En este div se encuentra el boton de enviar código, la página adonde redirecciona y el texto que esta debajo del botón-->
                                 <div class="d-grid gap-2 mt-5">
-                                    <a class="btn btn-orange-color text-light p-2 rounded-3"
-                                        href="../admin/recuperacion_contra_2.html">Envíar código</a>
+                                    <button type="submit" class="btn btn-orange-color text-light p-2 rounded-3" id="boton">Envíar código</button>
                                     <div class="fw-semibold text-decoration-none text-dark text-center form-text">
                                         Recuerda revisar tu bandeja de correos para ver el código que debes ingresar
                                     </div>
@@ -53,6 +52,14 @@
             </div>
         </div>
     </main>
+    <!-- Framework Bootstrap - JS -->
+    <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Agregamos la libreria para alertas -->
+    <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- Agregamos el controlador general de la aplicacion-->
+    <script type="text/javascript" src="../../controllers/utils/components.js"></script>
+    <!-- Agregamos el controlador de la vista -->
+    <script type="text/javascript" src="../../controllers/admin/recuperacion_contra_1.js"></script>
 </body>
 
 </html>
