--- a/system_huellitas/views/admin/recuperacion_contra_3.html
+++ b/system_huellitas/views/admin/recuperacion_contra_3.html
@@ -36,7 +36,7 @@
                                     <label for="Npass1_recuperacion" class="form-label">Nueva contraseña</label>
                                     <input type="password"
                                         class="form-control  form-control-lg bg-white p-2 shadow rounded-3"
-                                        id="Npass1_recuperacion" name="Npass1Recuperacio">
+                                        id="password" name="Npass1Recuperacio">
                                 </div>
                                 <div>
                                     <!--En este div se encuentra el input, el tipo de contenido del input, el label que esta arriba del input y la longitud del input-->
@@ -44,12 +44,11 @@
                                         contraseña</label>
                                     <input type="password"
                                         class="form-control bg-white form-control-lg p-2 shadow rounded-3"
-                                        id="Npass2_recuperacion" name="Npass2Recuperacion">
+                                        id="newpassword" name="Npass2Recuperacion">
                                 </div>
                                 <!--En este div se encuentra el boton de enviar cambiar contraseña, la página adonde redirecciona y el texto que esta debajo del botón-->
                                 <div class="d-grid gap-2 mt-5">
-                                    <a class="btn btn-orange-color text-light p-2 rounded-3"
-                                        href="../admin/index_admin.html">Envíar</a>
+                                    <button type="submit" class="btn btn-orange-color text-light p-2 rounded-3" id="boton">Guardar</button>
                                     <div class="fw-semibold text-decoration-none text-dark text-center form-text">
                                         Guarda siempre tu contraseña en algún lugar seguro y no la olvides.
                                     </div>
@@ -61,6 +60,14 @@
             </div>
         </div>
     </main>
+    <!-- Framework Bootstrap - JS -->
+    <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Agregamos la libreria para alertas -->
+    <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- Agregamos el controlador general de la aplicacion-->
+    <script type="text/javascript" src="../../controllers/utils/components.js"></script>
+    <!-- Agregamos el controlador de la vista -->
+    <script type="text/javascript" src="../../controllers/admin/recuperacion_contra_1.js"></script>
 </body>
 
 </html>
